[gd_scene load_steps=3 format=3 uid="uid://d1j64mm8jp68"]

[ext_resource type="Script" path="res://Conveyors/Components/Detectors/conveyor_detector.gd" id="1_0ak44"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j2fbb"]
size = Vector2(16, 16)

[node name="ConveyorDetector" type="Area2D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_0ak44")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_j2fbb")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
